fixes the search bar not showing

--- a/src/index.css
+++ b/src/index.css
@@ -58,18 +58,20 @@
 
 #messages {
     position: fixed;
-    top: 83px; 
+    top: 83px;
     left: 0;
-    width: 100vw;
-    bottom: 80px;
+    width: 100%;
+    bottom: 20px;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
     font-size: 12px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: transparent;
     z-index: 900;
+    box-sizing: border-box;
+    scroll-padding-top: 20px;
 }
 
 .AI {
